<resources>
    <string name="app_name">Word Counter</string>
    <string name="hint_enter_text">Enter text Here</string>
    <string name="btn_count">Count</string>
    <string name="result_label">Result:</string>
    <string name="toast_empty">Please Enter Some Text</string>

    <string-array name="metrics">
        <item>Sentences</item>
        <item>Words</item>
        <item>Characters</item>
        <item>Numbers</item>
    </string-array>
</resources>
